css/scrabble.css
body {
    font-family: sans-serif;
}

h1 {
    text-align: center;
    padding: 20px 0;
    font-weight: bold;

}

h2 {
    margin-bottom: 20px;
}

.radios {
    margin-top: 15px;
    margin-bottom: 15px;
}

/* defines the scrabble board layout */
#scrabbleLayout {
    width: 474px;
    height: 474px;
    border: 5px solid black;
    background-color: white;
}

/* defines the basic board square on the scrabble board */
.boardTile {
	height: 30px;
	width: 30px;
    border-top-width: 1px;
	border-right-width: 4px;
	border-bottom-width: 4px;
	border-left-width: 1px;
    border-collapse: collapse; /* single border not detached */

}

/* defines a scrabble letter tile that would lay on the board */
#letterTile {
    float: left;
	text-align: center;
    vertical-align: middle;
    font-family: 'Source Sans Pro', sans-serif;
    background-color: #e6cc93;
	height: 30px;
	width: 30px;
	border-radius: 4px;
    border-style: solid;
    border-width: 3px;
    border-color: #dec48b #dec48b #b69c63 #dec48b;
}

.letter {
	font-size: 25px;
}

.number {
	font-size: 10px;
	margin: 0px;
}

.btn-calc {
    margin: 0;
    text-align: center;
}

table {
    border-collapse: collapse;
}

td {
    height: 30px;
    width: 30px;
    border: 2px solid white;
}

/* these are the board Tile types that denote
 * double word score, triple letter score, etc
 * These tiles are colored differently based on their type
 */

.blank {
   background-color: grey;
}

.tws {
   background-color: #e8221e;
   font-size: 6px;
   text-align: center;
   vertical-align: middle;
}

.dws {
   background-color: pink;
   font-size: 6px;
   text-align: center;
   vertical-align: middle;
}

.tls {
   background-color: #5b54de;
   font-size: 6px;
   text-align: center;
   vertical-align: middle;
}

.dls {
   background-color: lightblue;
   font-size: 6px;
   text-align: center;
   vertical-align: middle;
}

